--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,17 +1,13 @@
 .profile__info {
   margin: 0 auto 0 30px;
-  display: grid;
-  grid-template-areas: "name button"
-                       "about about";
-  grid-template-columns: auto 1fr;
-  column-gap: 18px;
-  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  width: 100%;
 }
 
 @media screen and (max-width: 635px) {
   .profile__info {
-    column-gap: 10px;
     margin: 0;
-    align-self: center;
   }
 }
