--- a/src/blocks/profile/__name/profile__name.css
+++ b/src/blocks/profile/__name/profile__name.css
@@ -1,6 +1,5 @@
 .profile__name {
-  grid-area: name;
-  margin: 22px 0 0 0;
+  margin: 0;
   padding: 0;
   font-style: normal;
   font-weight: 500;
@@ -14,14 +13,13 @@
 
 @media screen and (max-width: 929px) {
   .profile__name {
-    margin: 32px 0 0 0;
     font-size: 32px;
   }
 }
 
 @media screen and (max-width: 635px) {
   .profile__name {
-    margin: 27px 0 0 28px;
+    margin: 27px 0 0 30px;
     font-size: 27px;
     line-height: 1.22;
     text-align: center;
