--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 @import url(./blocks/profile/__avatar/profile__avatar.css);
 @import url(./blocks/profile/__avatar-update-button/profile__avatar-update-button.css);
 @import url(./blocks/profile/__info/profile__info.css);
+@import url(./blocks/profile/__name-container/profile__name-container.css);
 @import url(./blocks/profile/__name/profile__name.css);
 @import url(./blocks/profile/__job/profile__job.css);
 @import url(./blocks/profile/__button/profile__button.css);
